# rust-examples

./: Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
benches/: dispatch.rs
rust_examples/: all.html  index.html  macro.approx!.html  macro.approx.html  macro.count.html  macro.impl_max_value!.html  macro.impl_max_value.html  macro.substitute!.html  macro.substitute.html  sidebar-items.js
rust_examples/adts/: enum.Tree.html  index.html  sidebar-items.js  struct.SelfReferentialStructureTest.html
rust_examples/brands/: index.html  sidebar-items.js  struct.BrandedIndex.html  struct.BrandedVec.html  struct.InvariantLifetime.html
rust_examples/collect/: fn.collect_initials.html  fn.read_files.html  index.html  sidebar-items.js
rust_examples/dependent/: index.html  sidebar-items.js  struct.HCons.html  struct.HNil.html  struct.NotAddTest.html  struct.NotPredTest.html  struct.Succ.html  struct.Vector.html  struct.Zero.html  trait.AddEq.html  trait.HList.html  trait.Nat.html  trait.Pred.html
rust_examples/dispatch/: enum.Trigonometric.html  fn.gradient_descent_dynamic.html  fn.gradient_descent_static.html  index.html  sidebar-items.js  struct.CannotMonomorphizeDifferentiableInVecTest.html  struct.Quadratic.html  trait.Differentiable.html
rust_examples/errors/: fn.explained_div.html  fn.maybe_div.html  fn.naive_div.html  index.html  sidebar-items.js
src/: adts.rs  brands.rs  collect.rs  dependent.rs  dispatch.rs  errors.rs  lib.rs  macros.rs  memory.rs  orphan.rs  rc.rs  rsqrt.rs  typing.rs
(+79 files in other folders)
