[package]
name = "rust-examples"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
description = "Support materials for Rust tech-talks"
repository = "https://github.com/matyama/rust-examples"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# Criterion Benchmarks - https://bheisler.github.io/criterion.rs/book/criterion_rs.html
#  - Additionally, install and run via https://crates.io/crates/cargo-criterion
criterion = "0.3"

# Property-based test framework for Rust - https://github.com/BurntSushi/quickcheck
quickcheck = "1"
quickcheck_macros = "1"

# Fixture-based test framework for Rust: https://github.com/la10736/rstest
rstest = "0.11"

[[bench]]
name = "dispatch"
harness = false
